results/SVCOMP/specgen/log-iarith1-2024_02_26_00_48_45.txt
class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    //@ maintaining i == 99;
    //@ maintaining tmp == i + 2;
    int tmp = i + 2;
    i = tmp;
    //@ maintaining tmp == i - 3;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    //@ maintaining tmp == i * 2;
    tmp = i * 2;
    i = tmp;
    //@ maintaining tmp == i / 3;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    //@ maintaining l == 99;
    l += 2L;
    l -= 3L;
    //@ maintaining l == l * 2L;
    l *= 2L;
    //@ maintaining l == l / 3L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:8: error: variable declaration not allowed here
    int tmp = i + 2;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:6: error: Loop specifications must immediately precede a loop statement
    //@ maintaining i == 99;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:10: error: Loop specifications must immediately precede a loop statement
    //@ maintaining tmp == i - 3;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:15: error: Loop specifications must immediately precede a loop statement
    //@ maintaining tmp == i * 2;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:18: error: Loop specifications must immediately precede a loop statement
    //@ maintaining tmp == i / 3;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:25: error: Loop specifications must immediately precede a loop statement
    //@ maintaining l == 99;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:28: error: Loop specifications must immediately precede a loop statement
    //@ maintaining l == l * 2L;
        ^
/home/max/Documents/JMLGPT/tmp/iarith1.java:30: error: Loop specifications must immediately precede a loop statement
    //@ maintaining l == l / 3L;
        ^
8 errors

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures \result == -32;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == -32;
               ^
1 error

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures \result == -32;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == -32;
               ^
1 error

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    int tmp;
    tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

